# AI-lightning-detector

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README.md  cli.md  next-steps.md  open-questions.md  plan.md  references.md  restart.md  roadmap.md  troubleshooting.md  user-guide.md
docs/minicpm-v/: deployment.md  overview.md  repo-notes.md  setup.md  usage-video.md
flash_attn/: __init__.py
lightning_detector/: cli.py  json_utils.py  model.py  video.py
lightning_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: inspect_videos.py  smoke_chat.py  sync_cli_help.py  use-edge.sh  use-stable.sh
